<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="go_to_the_next_page">Go to the next page</string>
    <string name="owner">owner</string>
    <string name="uploader">uploader</string>
    <string name="reviewers">reviewers</string>
    <string name="project">project</string>
    <string name="branch">branch</string>
    <string name="topic">topic</string>
    <string name="strategy">strategy</string>
    <string name="update">update</string>
</resources>
